--- a/ms-security-dev.properties
+++ b/ms-security-dev.properties
@@ -1,1 +1,4 @@
 ms.security.property=properties ms-security desarrollo
+spring.jpa.hibernate.ddl-auto=update
+server.port=0
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
